--- a/week1/cv.css
+++ b/week1/cv.css
@@ -1,67 +1,87 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
-
-
-*{
-    font-family: 'Poppins', sans-serif;
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    scroll-behavior:smooth;
-   
-    
-  }
-
-
-
-.resume{
-    
-    width: 80%;
-    background-color: bisque;
-    margin: auto;
-    margin-top: 50px;
-    position: absolute;
-    left: 50%;
-    transform: translatex(-50%);
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    
-}
- img{ width: 100%;
-   
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.icon{
-    color:#3a6cf4;
-    font-size:0.9em;
-    text-align:left;
-    
-  }
-
- ul{
-    list-style:none;
- }
-
-  .info {
-    display: inline;
-    color: black;
-  }
-.profile{
-    padding: 0;
-    background-color: aqua;
-    width: 30%;
-    
-
+.resume {
+  width: 80%;
+  background-color: bisque;
+  margin: 50px auto;
+  display: flex;
+  padding: 20px;
+}
+img {
+  width: 100%;
 }
 
-.daitels{
-    padding: 20px;
+.icon {
+  color: #3a6cf4;
+  font-size: 0.9em;
+  text-align: left;
 }
- .content{
 
-    width: 60%;
- }
+ul {
+  list-style: none;
+}
 
+.info {
+  display: inline;
+  color: black;
+}
+.profile {
+  background-color: aqua;
+  flex-basis: 45%;
+}
 
+.profile h2,
+h3 {
+  padding: 5px 10px;
+}
 
+.details {
+  padding: 20px 15px;
+}
+
+.details section {
+  padding: 10px;
+}
+
+.details h3 {
+  padding-left: 0px;
+}
+
+.icon,
+.info {
+  padding: 5px 0;
+}
+
+.content {
+  flex-basis: 70%;
+  padding: 20px;
+}
+
+.content section {
+  margin: 50px 0;
+}
+
+.content section h3,
+h4,
+p {
+  padding: 10px 0;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: antiquewhite;
+}
+
+footer i {
+  color: black;
+  padding: 10px;
+}
